styles/base.css
body, h1, h2, h3, p, ul, li {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Roboto', sans-serif;
    background-color: #f4f4f4;
    color: #333;
}

header {
    background-color: #346da1;
    padding: 20px;
    text-align: center;
    align-items: center;
    flex-direction: column;
    display: flex;
}

header img {
    border-radius: 50%;
    max-width: 100px;
    margin-right: 10px;
}

header h1 {
    margin-top: 0;
    color: #fff;
}

h1 {
    display: flex;
    align-items: center;
}



nav ul {
    background-color: #2c3e50;
    list-style-type: none;
    padding: 10px;
    text-align: center;
    display: flex;
    flex-direction: column;
}

nav li {
    margin-right: 20px;

}

nav a {
    text-decoration: none;
    color: #ecf0f1;
}

main {
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
    display: flex;
    flex-direction: column; 
}
h2 {
    text-align: center;

}

.card {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin-bottom: 20px;
}

.card h3 {
    color: #3498db;
}

.card ul {
    list-style-type: circle;
}



footer {
    background-color: #2c3e50;
    color: #ecf0f1;
    padding: 10px;
    text-align: center;
    margin-top: auto;
}

nav {
    display: block;
    
}

#menu {
	font-size: 1.5rem;
	border: 0;
	background: none;
	color: #000;
	position: absolute;
	top: 1rem;
	right: 1rem;
}


#menu::before {
    content: "☰";
}

#menu.open::before {
	content: "✖️";
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
	background-color: #333;
	color: #fff;
}

.active::before {
    content:"| ";
}

.active::after {
    content:" |";
}

iframe {
    width: 100%; 
    height: 300px;  
    margin-top: 20px; 
    grid-column: 1/3;
}



@media screen and (max-width: 768px) {
    nav ul {
        display: none;
    }

    nav ul.open {
        display: flex;
    }

    #menu.open {
        display: block;
    }
}

@media screen and (min-width: 768px) {
    main {
        display: grid;
        grid-template-columns: 3fr 1fr;
        grid-template-rows: auto;
        gap: 20px;
        max-width: 100%;
        align-items: flex-start flex-end;
        margin: 50px;
    }
     
    h2 {
        grid-column: 1 / -1;
        text-align: left;
        margin: 10px;
    }
     
    .card {
        padding: 20px;
        border: 1px solid #ccc;
        margin: 10px;
    }

    #menu {
        display: none;
    }

}

